# stripedhyena

./: pyproject.toml  pytest.ini
configs/: 7b-sh-32k-v1.yml  sh-stem-test.yml
stripedhyena/: non_cuda.py
test/: test_backward.py  test_forward.py  test_numerics.py
