[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stripedhyena"
version = "0.2.1"
description = "Model and inference code for beyond Transformer architectures"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Michael Poli"}]
dependencies = [
    "transformers",
    "tokenizers",
    "torch>=2.10.0",
    "einops>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "isort",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

